--- a/index.html
+++ b/index.html
@@ -409,6 +409,17 @@
                             Connects Platform links college students for professional networking, resource sharing, and senior mentorship. Enhance your academic and career growth through collaboration and expert advice.
                        </p>
                     </div>
+                    <div class="testimonial__card swiper-slide"></div>
+                        <img src="assets/img/work2.jpg" alt="" class="testimonial__img">
+
+                        <h3 class="testimonial__name">Client-Server Dictionary Model</h3>
+                        <a href="https://github.com/Itsanshi/Client-Server-Dictionary-model" class="work__button">
+                            Github <i class='bx bxl-github work__icon'></i>
+                        </a>
+                        <p class="testimonial__description">
+                            The Client-Server Dictionary Model merges input letters and digits to generate random combinations. Enhance your projects with diverse and unique outputs through efficient data processing and generation.
+                          </p>
+                    </div>
 
                    
                     
@@ -479,9 +490,9 @@
                         </div>
 
                         <div class="contact__card">
-                            <i class='bx bxl-whatsapp contact__card-icon'></i>
-                            <h3 class="contact__card-title">Whatsapp</h3>
-                            <span class="contact__card-data">7033369235</span>
+                            <i class='bx bxl-linkedin contact__card-icon'></i>
+                            <h3 class="contact__card-title">Linkedin</h3>
+                            <span class="contact__card-data">itsanshii</span>
 
                             <a href="https://api.whatsapp.com/send?phone=+916969696969&text=Hey there!" target="_blank"
                                 class="contact__button">
