--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                             Connects Platform links college students for professional networking, resource sharing, and senior mentorship. Enhance your academic and career growth through collaboration and expert advice.
                        </p>
                     </div>
-                    <div class="testimonial__card swiper-slide"></div>
+                    <!-- <div class="testimonial__card swiper-slide"></div>
                         <img src="assets/img/work2.jpg" alt="" class="testimonial__img">
 
                         <h3 class="testimonial__name">Client-Server Dictionary Model</h3>
@@ -419,7 +419,7 @@
                         <p class="testimonial__description">
                             The Client-Server Dictionary Model merges input letters and digits to generate random combinations. Enhance your projects with diverse and unique outputs through efficient data processing and generation.
                           </p>
-                    </div>
+                    </div> -->
 
                    
                     
