Edited about section

--- a/index.html
+++ b/index.html
@@ -150,9 +150,7 @@
                     </div>
 
                     <br class="about__description">
-                        Hello! I'm a passionate UI/UX designer with a keen interest in technology and a strong background in competitive programming.
-                         I thrive on creating intuitive, user-centric designs that enhance the digital experience. 
-                         My competitive programming skills sharpen my problem-solving abilities, allowing me to tackle complex challenges with innovative solutions. Let's create something amazing together!
+                        Hello! I'm a passionate Software Engineer with a deep interest in UI/UX design and DevOps. I love building scalable, efficient systems while ensuring they deliver seamless and intuitive user experiences. My background in competitive programming has honed my problem-solving skills, which I apply across both development and infrastructure challenges. Whether it's designing sleek interfaces, automating deployments, or writing clean, maintainable code — I thrive on bringing ideas to life through technology. Let’s build something impactful together!
                          <br>
                          <br>
                         <b> Email id </b>: anshikaananad02@gmail.com</br>
