--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                      <!-- <h2 style="color:#fff">I'm <span class="typing" style="color:#933798"></span></h2> -->
 
                     <div class="home__button">
-                        <a download="" href="https://drive.google.com/file/d/18u3sPmy2JCieHWKQP2TSISMqZ2BTGP0J/view?usp=sharing" target="_blank" class="button button--ghost">
+                        <a download="" href="https://drive.google.com/file/d/10Ng4SxRV87xzCoGBsQAZo76z_CFqRx1R/view" target="_blank" class="button button--ghost">
                             Download CV
                         </a>
 
@@ -128,7 +128,7 @@
             
 
             <div class="about__container container grid">
-                <img src="assets/img/Anshi.jpg" alt="" class="about__img">
+                <img src="assets/img/Anshi.jpeg" alt="" class="about__img">
 
                 <div class="about__data">
                     <div class="about__info">
@@ -153,7 +153,7 @@
                         Hello! I'm a passionate Software Engineer with a deep interest in UI/UX design and DevOps. I love building scalable, efficient systems while ensuring they deliver seamless and intuitive user experiences. My background in competitive programming has honed my problem-solving skills, which I apply across both development and infrastructure challenges. Whether it's designing sleek interfaces, automating deployments, or writing clean, maintainable code — I thrive on bringing ideas to life through technology. Let’s build something impactful together!
                          <br>
                          <br>
-                        <b> Email id </b>: anshikaananad02@gmail.com</br>
+                        <b> Email id </b>: anshikaananad02@gmail.com <br>
                     </p>
                     <br>
 
@@ -459,7 +459,7 @@
 
         <!--=============== CONTACT ===============-->
         <section class="contact section" id="contact">
-            <sapn class="section__subtitle">Get in touch</sapn>
+            <span class="section__subtitle">Get in touch</span>
             <h3 class="section__title">Contact Me</h3>
 
             <div class="contact__container container grid">
